--- a/style.css
+++ b/style.css
@@ -133,9 +133,78 @@ select {
   border: 0;
   border-radius: 100px;
   cursor: pointer;
+  transition: background 0.3s ease-in-out;
 }
 
 .button:hover,
 .button:focus {
   background: var(--gradient-primary);
+}
+
+.result-summary {
+  --border-radius: 2rem;
+  --padding: 2.5rem;
+  max-width: 46rem;
+  display: grid;
+}
+
+@media (min-width: 600px) {
+  .result-summary {
+    grid-template-columns: 1fr 1fr;
+    border-radius: var(--border-radius);
+    overflow: hidden;
+    box-shadow: 0.5rem 1rem 3rem hsl(var(--clr-neutral-hsl-700), 0.2);
+    margin-inline: 1rem;
+  }
+
+  .results {
+    border-radius: 0 0 var(--border-radius);
+  }
+}
+
+.results {
+  text-align: center;
+  border-radius: 0 0 var(--border-radius) var(--border-radius);
+  color: hsl(var(--clr-neutral-hsl-100), 0.7);
+  background: var(--gradient-primary);
+  padding: var(--padding);
+}
+
+.summary {
+  padding: var(--padding);
+}
+
+.grid-flow {
+  display: grid;
+  align-content: start;
+  gap: 1rem;
+}
+
+.grid-flow[data-spacing="large"] {
+  gap: 2rem;
+}
+
+.result-score {
+  background: var(--gradient-to-transparent);
+  width: 12rem;
+  margin-inline: auto;
+  aspect-ratio: 1 / 1;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  align-content: center;
+}
+
+.result-score span {
+  display: block;
+  font-size: var(--fs-900);
+  color: var(--clr-neutral-100);
+  font-weight: var(--fw-black);
+  line-height: 1;
+}
+
+.result-rank {
+  color: var(--clr-neutral-100);
+  font-size: var(--fs-700);
+  font-weight: var(--fw-bold);
 }
